# oracle-core

./: .gitignore  .oracle-core.log.swp  Cargo.toml  Dockerfile  README.md  bootstrap_config_example.yaml  docker-compose.yml  oracle-config-ada.yaml  oracle-config.yaml  scanIDs.jsons
.github/workflows/: ci.yml  docker_crossbuild_publish.yml  release.yml
connectors/Connector-Lib/: Cargo.toml  README.md  oracle-config.yaml
connectors/Connector-Lib/src/: lib.rs
connectors/ERG-USD-Connector/: Cargo.toml
connectors/ERG-USD-Connector/src/: main.rs
connectors/ada-usd-connector/: Cargo.toml  Dockerfile
connectors/ada-usd-connector/src/: main.rs
connectors/connector-lib/: .gitignore  Cargo.toml  README.md
connectors/connector-lib/src/: connector.rs  lib.rs  oracle_core.rs
connectors/erg-usd-connector/: Cargo.toml  Dockerfile  README.md
connectors/erg-usd-connector/src/: api.rs  connector_config.rs  main.rs
connectors/frontend-connector-lib/: Cargo.toml  README.md
connectors/frontend-connector-lib/src/: api.rs  lib.rs
core/: Cargo.toml  build.rs
core/src/: action_report.rs  actions.rs  address_util.rs  api.rs  bootstrap.rs  box_kind.rs  cli_commands.rs  commands.rs  contracts.rs  datapoint_source.rs  default_parameters.rs  explorer_api.rs  logging.rs  main.rs  metrics.rs  migrate.rs  monitor.rs  node_interface.rs  oracle_config.rs  oracle_state.rs  oracle_types.rs  pool_commands.rs  pool_config.rs  scans.rs  serde.rs  spec_token.rs  state.rs  templates.rs  tests.rs  util.rs  wallet.rs
core/src/actions/: action_result.rs  collect.rs
core/src/box_kind/: ballot_box.rs  buyback_box.rs  oracle_box.rs  pool_box.rs  refresh_box.rs  update_box.rs
core/src/cli_commands/: bootstrap.rs  extract_reward_tokens.rs  import_pool_update.rs  prepare_update.rs  print_conf.rs  print_reward_tokens.rs  transfer_oracle_token.rs  update.rs  update_pool.rs  vote_update_pool.rs
core/src/commands/: extract_reward_tokens.rs  publish_data_point.rs  publish_datapoint.rs  refresh.rs
core/src/contracts/: ballot.rs  oracle.rs  pool.rs  refresh.rs  update.rs
core/src/datapoint_source/: ada_usd.rs  aggregator.rs  assets_exchange_rate.rs  bitpanda.rs  coincap.rs  coingecko.rs  combined.rs  custom_ext_script.rs  erg_btc.rs  erg_usd.rs  erg_xau.rs  predef.rs
core/src/datapoint_source/erg_xau/: coingecko.rs
core/src/explorer_api/: explorer_url.rs
core/src/node_interface/: node_api.rs
core/src/pool_commands/: publish_datapoint.rs  refresh.rs  test_utils.rs  transfer_oracle_token.rs
core/src/scans/: generic_token_scan.rs  oracle_token_scan.rs  registry.rs
core/src/tests/: bootstrap_and_run.rs
docker/: ergo.conf  oracle-config.yaml
docs/: API-Endpoints.md  Basic-Oracle-Pool-Spec.md  Governance-Stake-Slashing-Pool-Spec.md  Oracle-Config.md  Read-Only-Cores.md  Scanning.md  Stake-Slashing-Pool-Spec.md  how_to_bootstrap.md  update_epoch_length.md
docs/diagrams/: basic_oracle_pool_state_machines.drawio
docs/specs/: Basic-Oracle-Pool-Spec.md  Governance-Stake-Slashing-Pool-Spec.md  Stake-Slashing-Pool-Spec.md
docs/specs/v0.1/: README.md  Stake-Slashing-Pool-Spec.md
docs/specs/v0.2/: Deviation-Checking-Oracle-Pool-Spec.md  README.md
ergo-chain-sim/: Cargo.toml
ergo-chain-sim/src/: block.rs  chain.rs  lib.rs
oracle-core-deployed/: oracle-config.yaml
oracle-pool-bootstrap/: .travis.yml  README.md  build.sbt  manual-pool-bootstrap-instructions.md  readme.md
oracle-pool-bootstrap/bootstrap-cli/: application.conf  readme.md
oracle-pool-bootstrap/bootstrap-cli/source/: .scalafmt.conf  build.sbt
oracle-pool-bootstrap/bootstrap-cli/source/src/main/scala/ergo/api/: Curl.scala  ErgoAPI.scala
oracle-pool-bootstrap/bootstrap-cli/source/src/main/scala/ergo/oraclepool/: Base58Check.java  package.scala
oracle-pool-bootstrap/bootstrap-cli/source/src/test/scala/ergo/: TestBase58.scala
oracle-pool-bootstrap/bootstrap-cli/v0.1/: readme.md
oracle-pool-bootstrap/bootstrap-cli/v0.1/src/main/scala/ergo/oraclepool/: CLI.scala
oracle-pool-bootstrap/bootstrap-cli/v0.2/: application.conf  readme.md
oracle-pool-bootstrap/bootstrap-cli/v0.2/src/main/scala/ergo/oraclepool/: CLI.scala  package.scala
oracle-pool-bootstrap/source/: .gitignore
oracle-pool-bootstrap/src/main/scala/ergo/api/: ErgoAPI.scala
oracle-pool-bootstrap/src/main/scala/ergo/oraclepool/: CLI.scala  package.scala
scripts/: grafana_dashboard.json  send_new_oracle.sh
scripts/ada-usd-oracle/: oracle-config.yaml  prepare-ada-usd-oracle.sh  run-oracle.sh
scripts/erg-usd-oracle/: oracle-config.yaml  prepare-erg-usd-oracle.sh  run-oracle.sh
smart-contracts/: Bootstrap.md  constants  epoch_prep.es  live_epoch.es
smart-contracts/v0.1/: data_point.es  epoch_prep.es  pool_deposit.es
smart-contracts/v0.2/: live_epoch.es
src/: actions.rs  api.rs  box.rs  encoding.rs  main.rs  node_interface.rs  oracle_config.rs  oracle_state.rs  scans.rs  templates.rs
systemd/: oracle-core.service
