[package]
name = "oracle-core"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust       = "0.4.4"
# Replace json eventually with just serde_json which is required for sigma-tree anyways
json            = "0.12.4"
reqwest         = { version = "0.10.6", features = ["blocking"] }
serde_json      = "1.0.55"
sigma-tree      = { git = "https://github.com/ergoplatform/sigma-rust", branch = "make-ast-mod-public",  features = ["with-serde"]  }
# sigma-tree = { git = "https://github.com/ergoplatform/sigma-rust", branch = "develop" }
