[package]
name = "oracle-core"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust       = "0.4.4"
json            = "0.12.4"
reqwest         = { version = "0.10.6", features = ["blocking"] }
serde_json      = "1.0.56"
sigma-tree      = { git = "https://github.com/ergoplatform/sigma-rust", branch = "develop",  features = ["with-serde"]  }
sincere         = "0.6.6"
thiserror       = "1.0.20"