[package]
name = "oracle-core"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust                   = "0.4.4"
json                        = "0.12.4"
reqwest                     = { version = "0.10.8", features = ["blocking"] }
serde_json                  = "1.0.57"
sincere                     = "0.6.6"
thiserror                   = "1.0.20"
anyhow                      = "1.0.32"
base16                      = "0.2.1"
blake2b_simd                = "0.5.10"
openssl                     = { version = "0.10", features = ["vendored"] }
log                         = "0.4.11"
simple-logging              = "2.0.2"
log-panics                  = "2.0.0"
crossbeam                   = "0.7.3"
ergo-lib                    = "0.13.3"
ergo-node-interface         = "0.2.5"
ergo-offchain-utilities     = { git = "https://github.com/robkorn/ergo-utilities-rust", rev = "3715262a88010165920eb755e01aa94eed5fb46e"}
