[package]
name = "oracle-core"
version = "2.0.0-alpha1"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
reqwest = { version = "0.10.8", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
json = "0.12.4"
serde_json = "1.0.57"
sincere = "0.6.6"
thiserror = "1.0.20"
anyhow = "1.0.32"
base16 = "0.2.1"
base64 = "0.13.0"
blake2b_simd = "0.5.10"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.11"
log-panics = "2.0.0"
log4rs = "1.1.1"
crossbeam = "0.7.3"
ergo-lib = { version = "0.17.0" }
# ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "3ada03f6a803a4541ae6d36c28a74efe87c2325b" }
ergo-node-interface = { git = "https://github.com/ergoplatform/ergo-node-interface-rust", rev = "84ac6ed680cf3a33b4089fea5e377a07d4df64b4" }
derive_more = "0.99"
# bounded-vec = { version = "^0.5.0" }
clap = {version = "=3.1.18", features = ["derive"]}
exitcode = "1.1.2"
lazy_static = "1.4.0"

[dev-dependencies]
# sigma-test-util = { version = "^0.3.0", path = "../../sigma-rust/sigma-test-util" }
# ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "3ada03f6a803a4541ae6d36c28a74efe87c2325b" , features = ["arbitrary"]}
ergo-lib = { version = "0.17.0", features = ["arbitrary"]}
proptest = {version = "1.0.0"}
proptest-derive = {version = "0.3.0"}
sigma-test-util = {version = "0.3.0"}
ergo-chain-sim = {version = "0.1.0", path="../ergo-chain-sim"}
env_logger = {version = "0.9.0"}
