[package]
name = "oracle-core"
version = "2.0.0-beta2"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>", "@greenhat", "@kettlebell", "@SethDusek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
json = "0.12.4"
serde_json = "1.0.57"
thiserror = "1.0.20"
anyhow = "1.0.32"
base16 = "0.2.1"
base64 = "0.13.0"
log = "0.4.11"
log-panics = "2.0.0"
log4rs = "1.2.0"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
axum = "0.6"
ergo-lib = { version = "0.21" }
# ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "3ada03f6a803a4541ae6d36c28a74efe87c2325b" }
ergo-node-interface = { git = "https://github.com/ergoplatform/ergo-node-interface-rust", rev = "34a07b4c449c021034c1d1281a6f1025a97c0eda" }
derive_more = "0.99"
clap = {version = "=3.1.18", features = ["derive"]}
exitcode = "1.1.2"
lazy_static = "1.4.0"
once_cell = "1.15.0"

[dev-dependencies]
# sigma-test-util = { version = "^0.3.0", path = "../../sigma-rust/sigma-test-util" }
# ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "3ada03f6a803a4541ae6d36c28a74efe87c2325b" , features = ["arbitrary"]}
ergo-lib = { version = "0.21", features = ["arbitrary"]}
proptest = {version = "1.0.0"}
proptest-derive = {version = "0.3.0"}
sigma-test-util = {version = "0.3.0"}
ergo-chain-sim = {version = "0.1.0", path="../ergo-chain-sim"}
env_logger = {version = "0.10.0"}
