[package]
name = "ergo-chain-sim"
version = "0.1.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2021"
description = "Simulator of the Ergo blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ergo-lib = { version = "0.17.0" }


[dev-dependencies]
pretty_assertions = "0.7.2"
