[package]
name = "connector-lib"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json            = "0.12.4"
yaml-rust       = "0.4.4"
serde           = {version = "1.0.114", features = ["derive"] }
serde_json      = "1.0.57"
reqwest         = { version = "0.10.7", features = ["blocking"] }
thiserror       = "1.0.20"
openssl = { version = "0.10", features = ["vendored"] }
anyhow          = "1.0.32"
sincere         = "0.6.6"