[package]
name = "erg-usd-connector"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json            = "0.12.4"
reqwest         = { version = "0.10.7", features = ["blocking"] }
connector-lib     = {path = "../connector-lib"}
anyhow          = "1.0.32"
openssl = { version = "0.10", features = ["vendored"] }